# huwise-utils-py

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_FOR_DEVELOPERS.md  debugging_script.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish-to-pypi.yml
docs/: examples.md  getting-started.md  index.md  metadata-reference.md  migration.md
docs/api/: bulk.md  config.md  dataset.md  http.md  index.md  legacy.md  utils.md
docs/stylesheets/: custom.css
scripts/: discover_themes.py  update_licenses.py
src/huwise_utils_py/: __init__.py  bulk.py  config.py  dataset.py  http.py  logger.py
src/huwise_utils_py/_legacy/: __init__.py  getters.py  setters.py
src/huwise_utils_py/utils/: __init__.py  decorators.py  validators.py
tests/: conftest.py
tests/integration/: __init__.py  test_api_calls.py  test_bulk_operations.py  test_setters.py
tests/unit/: __init__.py  test_bulk.py  test_config.py  test_dataset.py  test_http.py  test_logger.py  test_validators.py
